# distributed-cognitive-mesh

./: LICENSE
agents/hugging_face/: main.py  pyproject.toml
agents/hugging_face/app/: main.py
agents/hugging_face/app/schema/: auth.py
agents/hugging_face/app/service/: agent.py  agent_client.py  redis_service.py
agents/orchestrator/: main.py  pyproject.toml
agents/orchestrator/app/: main.py
agents/orchestrator/app/config/: settings.py
agents/orchestrator/app/service/: agent.py  agent_client.py  auth_service.py  redis_service.py
agents/wikipedia/: pyproject.toml
agents/wikipedia/app/: main.py
agents/wikipedia/app/service/: agent.py  auth_service.py  redis_service.py
server/: Dockerfile  README.md  index.html  pyproject.toml
server/app/: main.py
server/app/config/: settings.py
server/app/schema/: auth.py
server/app/service/: auth_service.py  redis_service.py
